--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Imagine serverless API service",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist && tsc && cd src && find . -name '*.json' -type f -exec cp {} ../dist/{} \\; && cd ..",
+    "pack": "rm -f dist.zip && cp package.json dist/package.json && (cp .npmrc dist/.npmrc || true) && cd dist && npm install --cache=./.npm --production && zip -r ../dist.zip . ** && cd ..",
+    "deploy": "npm run build && npm run pack && serverless deploy",
+    "deploy:stage": "npm run deploy -- --stage=stage",
+    "deploy:prod": "npm run deploy -- --stage=prod"
   },
   "repository": {
     "type": "git",
@@ -15,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/TylorShin/imagine-api/issues"
   },
-  "homepage": "https://github.com/TylorShin/imagine-api#readme"
+  "homepage": "https://github.com/TylorShin/imagine-api#readme",
+  "devDependencies": {
+    "@types/node": "^7.0.5",
+    "typescript": "^2.2.1"
+  }
 }
