--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "@types/node": "^7.0.5",
     "typescript": "^2.2.1"
+  },
+  "dependencies": {
+    "dynamoose": "^0.7.0"
   }
 }
