--- a/serverless.yml
+++ b/serverless.yml
@@ -9,19 +9,6 @@ provider:
 #  region: us-east-1
 
 # you can add statements to the Lambda function's IAM Role here
-#  iamRoleStatements:
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:ListBucket"
-#      Resource: { "Fn::Join" : ["", ["arn:aws:s3:::", { "Ref" : "ServerlessDeploymentBucket" } ] ]  }
-#    - Effect: "Allow"
-#      Action:
-#        - "s3:PutObject"
-#      Resource:
-#        Fn::Join:
-#          - ""
-#          - - "arn:aws:s3:::"
-#            - "Ref" : "ServerlessDeploymentBucket"
 
 # you can define service wide environment variables here
 environment: ${file(./config.js):env}
@@ -64,11 +51,7 @@ resources:
           Version: '2012-10-17'
           Statement:
             - Effect: Allow
-              Action:
-                - dynamodb:GetItem
-                - dynamodb:PutItem
-                - dynamodb:Query
-                - dynamodb:Scan
-              Resource: arn:aws:dynamodb:*:*:table/${self:service}
+              Action: "*"
+              Resource: arn:aws:dynamodb:*:*:*
         Roles:
           - Ref: IamRoleLambdaExecution
