Changed writePosts function dynamically

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "noImplicitAny": true,
+    "noUnusedLocals": true,
     "strictNullChecks": true,
     "lib": [
       "es6"
