--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "scripts": {
     "build": "rm -rf dist && tsc && cd src && find . -name '*.json' -type f -exec cp {} ../dist/{} \\; && cd ..",
-    "pack": "rm -f dist.zip && cp package.json dist/package.json && (cp .npmrc dist/.npmrc || true) && cd dist && npm install --cache=./.npm --production && zip -r ../dist.zip . ** && cd ..",
+    "pack": "rm -f dist.zip && cp package.json dist/package.json && cd dist && npm install --cache=./.npm --production && zip -r ../dist.zip . ** && cd ..",
     "deploy": "npm run build && npm run pack && serverless deploy",
     "deploy:stage": "npm run deploy -- --stage=stage",
     "deploy:prod": "npm run deploy -- --stage=prod"
