Added cloudwatch log's retention date options

--- a/serverless.yml
+++ b/serverless.yml
@@ -52,3 +52,11 @@ resources:
               Resource: arn:aws:dynamodb:*:*:*
         Roles:
           - Ref: IamRoleLambdaExecution
+
+    GetPostLogGroup:
+      Properties:
+        RetentionInDays: "30"
+
+    WritePostLogGroup:
+      Properties:
+        RetentionInDays: "30"
