--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "homepage": "https://github.com/TylorShin/imagine-api#readme",
   "devDependencies": {
+    "@types/jsonwebtoken": "^7.2.0",
     "@types/node": "^7.0.5",
+    "@types/password-hash": "^1.2.19",
     "@types/uuid": "^2.0.29",
+    "dotenv": "^4.0.0",
     "typescript": "^2.2.1"
   },
   "dependencies": {
     "dynamoose": "^0.7.0",
     "jsonwebtoken": "^7.3.0",
+    "password-hash": "^1.2.2",
     "uuid": "^3.0.1"
   }
 }
