--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: imagine-api
 provider:
   name: aws
   runtime: nodejs4.3
-
+  environment: ${file(./config.js):env}
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
@@ -11,7 +11,7 @@ provider:
 # you can add statements to the Lambda function's IAM Role here
 
 # you can define service wide environment variables here
-environment: ${file(./config.js):env}
+
 
 # you can add packaging information here
 package:
@@ -37,6 +37,29 @@ functions:
             parameters:
               paths:
                 id: true
+
+  getUser:
+    handler: handler.getUser
+    events:
+      - http:
+          method: get
+          path: ${self:service}/api/users
+
+  signup:
+    handler: handler.signup
+    events:
+      - http:
+          method: post
+          path: ${self:service}/api/users/new
+          cors: true
+
+  signin:
+    handler: handler.signin
+    events:
+      - http:
+          method: post
+          path: ${self:service}/api/users
+          cors: true
 
 resources:
   Resources:
